<resources>
  <string name="app_name">Sample-App</string>
  <string name="title_home">홈</string>
  <string name="title_logs">로그</string>
  <string name="title_settings">설정</string>
  <!-- Dilo Prefs -->
  <string name="pref_dilo_companion_width">pref_dilo_companion_width</string>
  <string name="pref_dilo_companion_height">pref_dilo_companion_height</string>
  <string name="pref_dilo_product_type">pref_dilo_product_type</string>
  <string name="pref_dilo_fill_type">pref_dilo_fill_type</string>
  <string name="pref_dilo_ad_position_type">pref_dilo_ad_position_type</string>
  <string name="pref_dilo_duration">pref_dilo_duration</string>
  <string name="pref_dilo_package_name">pref_dilo_package_name</string>
  <string name="pref_dilo_epi_code">pref_dilo_epi_code</string>
  <string name="pref_dilo_channel_name">pref_dilo_channel_name</string>
  <string name="pref_dilo_episode_name">pref_dilo_episode_name</string>
  <string name="pref_dilo_creator_id">pref_dilo_creator_id</string>
  <string name="pref_dilo_creator_name">pref_dilo_creator_name</string>
  <string name="pref_dilo_ad_target">pref_dilo_ad_target</string>
  <string name="pref_dilo_companion_size">pref_dilo_companion_size</string>
  <string name="pref_dilo_use_pause_in_notification">pref_dilo_use_pause_in_notification</string>
  <string name="pref_dilo_use_progress_bar_in_notification">pref_dilo_use_progress_bar_in_notification</string>
  <string name="pref_dilo_notification_title">pref_dilo_notification_title</string>
  <string name="pref_dilo_notification_text">pref_dilo_notification_text</string>
  <string name="pref_dilo_use_background">pref_dilo_use_background</string>
  <string name="pref_dilo_ad_request_delay">pref_dilo_ad_request_delay</string>
  <string name="pref_dilo_sdk_version">pref_dilo_sdk_version</string>
  <string name="pref_dilo_album_art_uri">pref_dilo_album_art_uri</string>
  <string name="pref_dilo_no_ads_fallback">pref_dilo_no_ads_fallback</string>
  <!-- 카울리 전면 광고 -->
  <string name="cauly_interstitial_app_code">APP_CODE</string>
  <string name="cauly_banner_app_code">APP_CODE</string>
</resources>
